fix: two profile scrollbars

--- a/front/src/app/profile/pages/profile/profile.component.css
+++ b/front/src/app/profile/pages/profile/profile.component.css
@@ -1,7 +1,3 @@
-.body {
-  overflow-x: hidden;
-}
-
 main {
   height: 100vh;
   padding: 0 1rem;
